--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "pdfmake": "^0.2.20",
     "sqlite3": "^5.1.7",
     "xlsx": "^0.18.5"
   }
